@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-81
-Date: 2010-10-02
+Date: 2010-10-03
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
