@@ -1,8 +1,28 @@
-despike <- function(x, n=3)
+normalize <- function(x)
 {
-    sd <- sqrt(var(x, na.rm=TRUE))
-    mean <- mean(x, na.rm=TRUE)
-    ifelse(abs(x - mean) / sd > n, mean, x) # not a good algorithm!
+    (x - mean(x, na.rm=TRUE)) / sqrt(var(x, na.rm=TRUE))
+}
+despike <- function(x, method=1, n=4, k=7, physical.range)
+{
+    xx <- x
+    small <- if (missing(physical.range)) min(x, na.rm=TRUE) else physical.range[1]
+    large <- if (missing(physical.range)) max(x, na.rm=TRUE) else physical.range[2]
+    unphysical <- xx < small | large < xx
+    xx[unphysical] <- median(xx, na.rm=TRUE) # (runmed, smooth) cannot handle NA
+    if (method == 1) {
+        xxs <- runmed(xx, k=k)
+    } else if (method == 2) {
+        xxs <- as.numeric(smooth(xx))
+    } else {
+        stop("unknown method ", method, "; try method=1 or method=2)")
+    }
+    deviant <- n < abs(normalize(xx - xxs))
+    x[deviant | unphysical] <- NA
+    ##.deviant<<-deviant
+    ##.unphysical<<-unphysical
+    ##.xx<<-xx
+    ##.xxs<<-xxs
+    x
 }
 rangelimit <- function(x, min, max)
 {
