@@ -1,7 +1,8 @@
 0.1-81
+- add despike()
 - add range.limit()
 - add unabbreviate.time()
-- add provisional support for bottom-tracking RDI ADCPs
+- add support for bottom-tracking RDI ADCPs
 - add support for interocean 's4' current meters
 - add unwrap.angle()
 - read.adv.nortek(): detect the velocity range
